--- a/src/components/Icons/IconStyles.css
+++ b/src/components/Icons/IconStyles.css
@@ -4,6 +4,7 @@
     margin: 0 5px;
     cursor: pointer;
     position: relative;
+    transition: var(--slow-transition);
 }
 
 .icon-container i {
