--- a/src/components/Navbars/ButtomNavbarStyles.css
+++ b/src/components/Navbars/ButtomNavbarStyles.css
@@ -8,6 +8,10 @@
     background: var(--background-transparent);
 }
 
+.buttom-navbar.hide {
+    bottom: -78px;
+}
+
 .buttom-navbar.open {
     height: 100px;
 }
