--- a/src/components/Navbars/ButtomNavbarStyles.css
+++ b/src/components/Navbars/ButtomNavbarStyles.css
@@ -9,7 +9,7 @@
 }
 
 .buttom-navbar.hide {
-    bottom: -78px;
+    bottom: -130px;
 }
 
 .buttom-navbar.open {
@@ -21,6 +21,10 @@
     height: 50px;
     font-size: 35px;
     position: fixed;
+    overflow: hidden;
+}
+
+.buttom-navbar-searcher {
     overflow: hidden;
 }
 
@@ -173,6 +177,7 @@
         left: 0;
     }
 
+    .buttom-navbar-searcher,
     .icons-container,
     .buttom-navbar {
         left: 0;
@@ -200,6 +205,7 @@
         left: 0;
     }
 
+    .buttom-navbar-searcher,
     .icons-container,
     .buttom-navbar {
         left: 0;
@@ -221,6 +227,7 @@
         left: calc(50% - 200px);
     }
     
+    .buttom-navbar-searcher,
     .icons-container,
     .buttom-navbar {
         width: 400px;
