--- a/src/components/Navbars/ButtomNavbarStyles.css
+++ b/src/components/Navbars/ButtomNavbarStyles.css
@@ -35,9 +35,16 @@
     margin: 0 5px;
     padding: 0 10px;
     cursor: pointer;
+    overflow: hidden;
     user-select: none;
     border-radius: 25px;
     transition: var(--slow-transition);
+}
+
+.buttom-navbar-button.hide {
+    width: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .buttom-navbar-button.open,
@@ -148,20 +155,26 @@
 }
 
 .ribbon {
-    top: 0px;
+    bottom: 50px;
     left: 25px;
     height: 0px;
     padding: 0 1em;
     overflow: hidden;
     position: absolute;
-    transition: var(--quick-transition);
+    transition: var(--slow-transition);
     color: var(--background-color-darker);
     background-color: var(--main-color);
     border-radius: var(--border-radius-large) var(--border-radius-large) 0 0;
 }
 
+.ribbon.open.hide {
+    height: 0px;
+    bottom: 100px;
+    border-radius: 0;
+}
+
 .ribbon.open {
-    top: -25px;
+    bottom: 50px;
     height: 25px;
 }
 
