--- a/src/components/Footer/FooterStyles.css
+++ b/src/components/Footer/FooterStyles.css
@@ -1,7 +1,9 @@
 footer {
+    bottom: 0;
     width: 100%;
     height: 150px;
     font-size: 10px;
+    position: absolute;
     background-color: var(--background-color-darker);
 }
 
