--- a/src/components/Videos/VideosStyles.css
+++ b/src/components/Videos/VideosStyles.css
@@ -18,7 +18,7 @@
 }
 
 .movie-overlay-details {
-    width: 90vw;
+    width: 90%;
     font-size: 40px;
     cursor: pointer;
     position: relative;
