--- a/src/pages/Details/MovieDetailsSmallStyles.css
+++ b/src/pages/Details/MovieDetailsSmallStyles.css
@@ -1,5 +1,4 @@
 .details-poster-sm {
-    height: 60vh;
     position: relative;
     background-size: cover;
     background-position: center;
@@ -14,10 +13,12 @@
 
 .details-tags-sm {
     align-items: center;
+    flex-wrap: wrap;
     padding: 0 var(--body-padding);
 }
 
 .details-tag {
+    margin-top: 1em;
     margin-right: 1em;
     color: var(--main-color);
 }
@@ -31,7 +32,7 @@
     width: 80px;
     padding: 10px;
     right: 30px;
-    bottom: -20px;
+    bottom: -25px;
     position: absolute;
     margin-right: 0.5em;
     background-color: rgba(255, 255, 255, 0.455);
@@ -43,3 +44,89 @@
     max-width: 70px;
 }
 
+#movieDetails {
+    display: flex;
+}
+
+.cast-card {
+    margin: 5px;
+    height: 220px;
+    cursor: pointer;
+    overflow: hidden;
+    min-width: 150px;
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+    outline: 1px solid transparent;
+    transition: var(--quick-transition);
+    border-radius: var(--border-radius-small);
+    background-color: var(--background-color);
+}
+
+.cast-card:hover  .cast-card-overlay{
+    bottom: 0;
+}
+
+.cast-card-overlay {
+    width: 100%;
+    height: 200px;
+    bottom: -202px;
+    position: absolute;
+    justify-content: flex-end;
+    transition: var(--slow-transition);
+    background: linear-gradient(to bottom, transparent, var(--background-color) 95%);
+}
+
+.cast-card-name {
+    padding: 1em;
+    font-weight: bold;
+    word-wrap: wrap;
+}
+
+@media only screen and (max-width: 600px) {
+
+    #movieDetails {
+        flex-direction: column;
+    }
+
+    .details-poster-sm {
+        height: 60vh;
+        width: 100vw;
+    }
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+
+    #movieDetails {
+        flex-direction: column;
+    }
+
+    .details-poster-sm {
+        height: 60vh;
+        width: 100vw;
+    }
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    
+    .details-poster-sm {
+        height: 80vh;
+    }
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    
+
+
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
+}
