--- a/src/components/Cards/CardsStyles.css
+++ b/src/components/Cards/CardsStyles.css
@@ -64,18 +64,23 @@
     font-size: 0.7em;
 }
 
-.card-title {
+.card-title,
+.card-info-content  a {
     font-size: 1.2em;
     min-height: 25px;
-    max-height: 68px;
+    max-height: 75px;
     overflow: hidden;
     font-weight: bold;
-    line-height: 22px;
+    line-height: 1em;
     word-wrap: wrap;
     text-overflow: ellipsis;
+    text-emphasis: none;
+    text-decoration: none;
+    color: #fff;
     transition: var(--slow-transition);
 }
 
+.card-info-content  a:hover
 .card-title:hover {
     text-shadow: 1px 1px 2px var(--background-color);
     text-decoration: underline;
